--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     function openMenu() {  var navMain = document.getElementById('navMenuId');  if (navMain.className=== 'navMenu') {    navMain.className += ' mobileView';  } else {    navMain.className = 'navMenu';  }}
     </script>
     <!--Home Navigation-->
-    <div class='navMenu' id='navMenuId'><a href='/www.roscoefox.gq/intro.html' class='main_links'><img src="img/Roscoe.jpg"></a>
+    <div class='navMenu' id='navMenuId'><a href='/intro.html' class='main_links'><img src="img/Roscoe.jpg"></a>
     <!--Communication Skills-->
       <div class='dropdown'><button class='dropbtn'>Communication Skills<i class='fa fa-caret-down'>&#9660;</i></button><div class='dropdown-content'>
         <a href='https://www.youtube.com/watch?v=xLkC-ODKQSc2'target="_blank">2 Rules For Learning Anything Faster</a>
@@ -239,8 +239,8 @@
   </div></div>            
   <!----More Info-->  
   <div class='dropdown'><button class='dropbtn'>More Info<i class='fa fa-caret-down'>&#9660;</i></button>
-    <div class='dropdown-content'><a href='/www.roscoefox.gq/about.html'>Our Program
-      <a href='/www.roscoefox.gq/staff.html'>Contributors</a>  
+    <div class='dropdown-content'><a href='/about.html'>Our Program
+      <a href='/staff.html'>Contributors</a>  
     
     
 <!--End of Navigation-->        
