--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body onclick='window.location.href="www.roscoefox.gq/main.html"'>
+  <body onclick='window.location.href="/main.html"'>
   </body>
 <head>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
