remove old links

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <nav>
       <div class="w3-container">
         <IMG STYLE="position:absolute; TOP:250px; LEFT:500px; width: auto; height: auto; " SRC="img/Roscoe2.jpg">
-        <a href="https://zkefj1tebohfyezh6a1vgq-on.drv.tw/www.roscoefox.gq/"></a><img class="w3-animate-fading" style="position:relative; left:30px;" src="img/math1.jpg">
-        <a href="https://zkefj1tebohfyezh6a1vgq-on.drv.tw/www.roscoefox.gq/"></a><img class="w3-animate-fading" style="position:relative; left:100px;"src="img/GED.png">
-        <a href="https://zkefj1tebohfyezh6a1vgq-on.drv.tw/www.roscoefox.gq/"></a><img class="w3-animate-fading" style="position:relative; right:250px; top:300px;"src="img/JOB.jpg">
-        <a href="https://zkefj1tebohfyezh6a1vgq-on.drv.tw/www.roscoefox.gq/"></a><img class="w3-animate-fading" style="position:relative; left:300px; top:100px;"src="img/Life.jpg">
+        <a href="/main.html"></a><img class="w3-animate-fading" style="position:relative; left:30px;" src="img/math1.jpg">
+        <a href="/main.html"></a><img class="w3-animate-fading" style="position:relative; left:100px;"src="img/GED.png">
+        <a href="/main.html"></a><img class="w3-animate-fading" style="position:relative; right:250px; top:300px;"src="img/JOB.jpg">
+        <a href="/main.html"></a><img class="w3-animate-fading" style="position:relative; left:300px; top:100px;"src="img/Life.jpg">
       </div>
     </div>
     </nav>
