--- a/staff.html
+++ b/staff.html
@@ -239,8 +239,8 @@
   </div></div>            
   <!----More Info-->  
   <div class='dropdown'><button class='dropbtn'>More Info<i class='fa fa-caret-down'>&#9660;</i></button>
-    <div class='dropdown-content'><a href='/www.roscoefox.gq/about.html'>Our Program
-      <a href='/www.roscoefox.gq/staff.html'>Contributors</a>  
+    <div class='dropdown-content'><a href='/about.html'>Our Program
+      <a href='/staff.html'>Contributors</a>  
     
     
 <!--End of Navigation-->        
