--- a/main.html
+++ b/main.html
@@ -252,7 +252,7 @@
 <body>
   <div class="w3-container">
     <img class="w3-animate-fading" style="position: absolute; top:250px; left:30px; width: auto; height: 50%;" src="img/Nurse.png" alt="Nurse">
-    <audio class="audio" src="/nursetalk.m4a" controls="controls"></audio>
+    <audio class="audio" src="/Nursetalkupdate.mp3" controls="controls"></audio>
     <img class="w3-animate-fading" style="position: absolute; top:250px; left:200px; width: auto; height: 20%;" src="img/speak.JPG" alt="Speech bubble">
     <div class="bubble">
       <div class="bubbleContent">
